fix  #368  (AQL operator window broken in Query Builder)

--- a/annis-gui/src/main/webapp/VAADIN/themes/annis/styles.css
+++ b/annis-gui/src/main/webapp/VAADIN/themes/annis/styles.css
@@ -11662,6 +11662,10 @@ div.v-layout.v-horizontal.v-widget {
 	border-color: #b3b3b3;
 }
 
+.annis .white-panel {
+	background-color: white;
+}
+
 .annis .v-table-cell-content-match_1 {
 	color: red;
 }
